--- a/src/components/Startup/LoadingScreen.css
+++ b/src/components/Startup/LoadingScreen.css
@@ -5,6 +5,7 @@
   width: 100vw;
   height: 100vh;
   background: #181818;
+  font-weight: 400;
   display: flex;
   align-items: center;
   justify-content: center;
