--- a/src/apps/Projects/Projects.css
+++ b/src/apps/Projects/Projects.css
@@ -1,6 +1,7 @@
 .projects-app {
   padding: 20px;
   font-family: 'Helvetica Neue', sans-serif;
+  font-weight: 400;
   color: #fff;
   max-width: 500px;
 }
@@ -24,6 +25,7 @@
 .project-label {
   color: #888;
   font-size: 14px;
+  font-weight: 400;
   width: 70px;
   text-align: right;
   margin-right: 15px;
@@ -40,6 +42,7 @@
 .project-name {
   color: #fff;
   font-size: 14px;
+  font-weight: 400;
   display: flex;
   align-items: center;
   gap: 4px;
@@ -91,6 +94,7 @@
 .project-detail {
   padding: 20px;
   font-family: 'Helvetica Neue', sans-serif;
+  font-weight: 400;
   color: #fff;
   max-width: 500px;
 }
@@ -108,6 +112,7 @@
 .project-detail-label {
   color: #888;
   font-size: 14px;
+  font-weight: 400;
   width: 80px;
   text-align: right;
   margin-right: 15px;
@@ -117,6 +122,7 @@
 .project-detail-text {
   color: #fff;
   font-size: 14px;
+  font-weight: 400;
   line-height: 1.4;
   max-width: 350px;
 }
@@ -131,6 +137,7 @@
   color: #fff;
   text-decoration: none;
   font-size: 14px;
+  font-weight: 400;
   cursor: pointer;
   display: grid;
   grid-template-columns: 90px auto auto;
