--- a/src/components/Window/Window.css
+++ b/src/components/Window/Window.css
@@ -6,6 +6,7 @@
   border: 1px solid var(--border-color);
   border-radius: 10px;
   box-shadow: 0 10px 30px var(--shadow-color);
+  font-weight: 400;
   display: flex;
   flex-direction: column;
   overflow: hidden;
