--- a/public/error.css
+++ b/public/error.css
@@ -1,43 +1,3 @@
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-thin.woff2') format('woff2');
-  font-weight: 100;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-light.woff2') format('woff2');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-medium.woff2') format('woff2');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-bold.woff2') format('woff2');
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -45,8 +5,7 @@
 }
 
 body {
-  font-family: 'Helvetica Neue', sans-serif;
-  font-weight: 400;
+  font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
@@ -75,7 +34,7 @@ body {
 
 .error-title {
   font-size: 60px;
-  font-weight: 700;
+  font-weight: 500;
   color: #eee;
   margin: 0;
   line-height: 1;
