--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,3 @@
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-thin.woff2') format('woff2');
-  font-weight: 100;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-light.woff2') format('woff2');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-medium.woff2') format('woff2');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url('/fonts/helveticaneue-bold.woff2') format('woff2');
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -55,14 +15,12 @@
   --window-header-bg: rgba(44, 44, 46, 0.9);
   --border-color: rgba(255, 255, 255, 0.1);
   --shadow-color: rgba(0, 0, 0, 0.3);
-  --font-family: 'Helvetica Neue', sans-serif;
 }
 
 body {
-  font-family: 'Helvetica Neue', sans-serif;
-  font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   overflow: hidden;
   position: fixed;
   width: 100%;
@@ -80,7 +38,6 @@ body {
   gap: 12px;
   color: #e0e0e0;
   font-size: 14px;
-  font-weight: 400;
 }
 
 .loading-spinner {
