--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -52,9 +52,10 @@
 }
 
 .shutdown-dropdown {
-  position: absolute;
-  top: 150%;
-  left: -5px;
+  position: fixed;
+  top: 45px;
+  left: 50%;
+  transform: translateX(-50%);
   background: #ff4444;
   color: #fff;
   padding: 8px 12px;
