--- a/src/components/Startup/StartupScreen.css
+++ b/src/components/Startup/StartupScreen.css
@@ -84,23 +84,82 @@
 
 .power-button-container {
   position: absolute;
-  bottom: 30px;
-  right: 30px;
+  bottom: 20px;
+  right: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+}
+
+.power-toggle {
+  position: relative;
+  height: 80px;
+  width: 80px;
+}
+
+.power-toggle:before {
+  content: '';
+  box-shadow: 0;
+  border-radius: 67.6px;
+  background: #111;
+  position: absolute;
+  margin-left: -28.8px;
+  margin-top: -28.8px;
+  opacity: 0.3;
+  height: 57.6px;
+  width: 57.6px;
+  left: 50%;
+  top: 50%;
 }
 
 .power-button {
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  box-shadow: 
+    0 12px 20px -3px rgba(0, 0, 0, 0.8), 
+    inset 0 -2px 3px -1px rgba(0, 0, 0, 0.4), 
+    0 -8px 12px -1px rgba(255, 255, 255, 0.1), 
+    inset 0 2px 3px -1px rgba(255, 255, 255, 0.15), 
+    inset 0 0 4px 1px rgba(255, 255, 255, 0.1), 
+    inset 0 16px 24px 0 rgba(255, 255, 255, 0.05);
+  border-radius: 55px;
+  position: absolute;
+  background: #1a1a1a;
+  margin-left: -27.5px;
+  margin-top: -27.5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 55px;
+  width: 55px;
+  left: 50%;
+  top: 50%;
+  border: none;
   cursor: pointer;
-  transition: all 0.3s ease;
-  filter: invert(0.6);
 }
 
-.power-button:hover {
-  transform: scale(1.1);
+.power-icon {
+  filter: invert(0.7);
+  transition: filter 200ms ease;
+}
+
+.power-button:hover .power-icon {
   filter: invert(0.9);
+}
+
+.power-button:active {
+  filter: blur(0.4px);
+  box-shadow: 
+    0 8px 20px -3px rgba(0, 0, 0, 0.6), 
+    inset 0 -6px 24px 1px rgba(255, 255, 255, 0.1), 
+    0 -8px 12px -1px rgba(255, 255, 255, 0.1), 
+    inset 0 6px 20px 0 rgba(0, 0, 0, 0.6), 
+    inset 0 0 8px 1px rgba(255, 255, 255, 0.08);
+  transform: scale(0.98);
+}
+
+.power-button:active .power-icon {
+  filter: invert(0.5);
+  transform: scale(0.95);
 }
 
 
