--- a/src/components/Startup/StartupScreen.css
+++ b/src/components/Startup/StartupScreen.css
@@ -51,14 +51,17 @@
   font-weight: 400;
 }
 
-.contact-link {
+.contact-item {
   display: flex;
   align-items: center;
   gap: 4px;
+  margin-bottom: 4px;
+}
+
+.contact-link {
   color: #eee;
   text-decoration: none;
   font-weight: 400;
-  margin-bottom: 4px;
   letter-spacing: 1px;
 }
 
@@ -70,13 +73,15 @@
 @media (hover: hover) {
   .contact-icon {
     opacity: 0;
+    transition: opacity 0.2s ease;
   }
 
   .contact-link:hover {
     color: #1c8aff;
+    text-decoration: underline;
   }
 
-  .contact-link:hover .contact-icon {
+  .contact-link:hover+.contact-icon {
     color: #1c8aff;
     opacity: 1;
   }
@@ -114,12 +119,12 @@
 
 .power-button {
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
-  box-shadow: 
-    0 12px 20px -3px rgba(0, 0, 0, 0.8), 
-    inset 0 -2px 3px -1px rgba(0, 0, 0, 0.4), 
-    0 -8px 12px -1px rgba(255, 255, 255, 0.1), 
-    inset 0 2px 3px -1px rgba(255, 255, 255, 0.15), 
-    inset 0 0 4px 1px rgba(255, 255, 255, 0.1), 
+  box-shadow:
+    0 12px 20px -3px rgba(0, 0, 0, 0.8),
+    inset 0 -2px 3px -1px rgba(0, 0, 0, 0.4),
+    0 -8px 12px -1px rgba(255, 255, 255, 0.1),
+    inset 0 2px 3px -1px rgba(255, 255, 255, 0.15),
+    inset 0 0 4px 1px rgba(255, 255, 255, 0.1),
     inset 0 16px 24px 0 rgba(255, 255, 255, 0.05);
   border-radius: 55px;
   position: absolute;
@@ -148,11 +153,11 @@
 
 .power-button:active {
   filter: blur(0.4px);
-  box-shadow: 
-    0 8px 20px -3px rgba(0, 0, 0, 0.6), 
-    inset 0 -6px 24px 1px rgba(255, 255, 255, 0.1), 
-    0 -8px 12px -1px rgba(255, 255, 255, 0.1), 
-    inset 0 6px 20px 0 rgba(0, 0, 0, 0.6), 
+  box-shadow:
+    0 8px 20px -3px rgba(0, 0, 0, 0.6),
+    inset 0 -6px 24px 1px rgba(255, 255, 255, 0.1),
+    0 -8px 12px -1px rgba(255, 255, 255, 0.1),
+    inset 0 6px 20px 0 rgba(0, 0, 0, 0.6),
     inset 0 0 8px 1px rgba(255, 255, 255, 0.08);
   transform: scale(0.98);
 }
