--- a/src/components/Startup/StartupScreen.css
+++ b/src/components/Startup/StartupScreen.css
@@ -70,7 +70,7 @@
   opacity: 1;
 }
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) {
   .contact-icon {
     opacity: 0;
     transition: opacity 0.2s ease;
