--- a/src/apps/MusicPlayer/MusicPlayer.css
+++ b/src/apps/MusicPlayer/MusicPlayer.css
@@ -56,7 +56,7 @@
   -webkit-backdrop-filter: blur(20px);
 }
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) {
   .play-pause-button:hover {
     transform: scale(1.05);
     color: #fff;
