--- a/src/components/Desktop/Desktop.css
+++ b/src/components/Desktop/Desktop.css
@@ -39,9 +39,7 @@
   z-index: 2;
 }
 
-.desktop-icon:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-}
+
 
 .desktop-icon img {
   width: 60px;
@@ -55,4 +53,10 @@
   word-break: break-word;
   width: 100px;
   font-weight: 500;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .desktop-icon:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
 }
