--- a/app/globals.css
+++ b/app/globals.css
@@ -41,8 +41,8 @@
   --sh-string: #4ade80;
   --sh-keyword: #fb7185;
   --sh-comment: #737373;
-  --clear-filter-bg: #991b1b;
-  --clear-filter-text: #f87171;
+  --clear-filter-bg: #952828;
+  --clear-filter-text: #f5c1c1;
 }
 
 html {
